--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
     "classnames": "^2.3.2",
-    "dotenv": "^16.0.3",
     "eslint": "8.36.0",
     "eslint-config-next": "13.2.4",
     "husky": "^8.0.3",
@@ -31,7 +30,9 @@
   },
   "packageManager": "npm@8.19.2",
   "devDependencies": {
-    "@types/jest": "^29.5.0",
-    "jest": "^29.5.0"
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^14.0.0",
+    "jest": "^29.5.0",
+    "jest-environment-jsdom": "^29.5.0"
   }
 }
